Taked view from CRUDPetSpace. And fix model.